--- a/4-gettingStartedWMaven/helloWorld/pom.xml
+++ b/4-gettingStartedWMaven/helloWorld/pom.xml
@@ -24,6 +24,7 @@
     </dependency>
   </dependencies>
 
+  <!--hook into package command will clean and then build it again-->
   <build>
     <plugins>
       <plugin>
