pom edited, to hook inot package command it cleans and then builds

--- a/4-gettingStartedWMaven/helloWorld/pom.xml
+++ b/4-gettingStartedWMaven/helloWorld/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
   </dependencies>
 
-  <!--hook into package command will clean and then build it again-->
+  <!--hook command will clean and then build it again-->
   <build>
     <plugins>
       <plugin>
