site plugin added to fix issue with 3.3

--- a/4-gettingStartedWMaven/helloWorld/pom.xml
+++ b/4-gettingStartedWMaven/helloWorld/pom.xml
@@ -40,6 +40,12 @@
           </execution>
         </executions>
       </plugin>
+<!--  error maven-site-plugin:3.3:site, fix below -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
     </plugins>
   </build>
 </project>
