comments in pom explaining how xsd to classes are created by plugin

--- a/7-generatingSourcesWMaven/mb2g-jaxb/pom.xml
+++ b/7-generatingSourcesWMaven/mb2g-jaxb/pom.xml
@@ -34,7 +34,10 @@
       <version>${jaxb.version}</version>
     </dependency>
   </dependencies>
-
+  <!--when the build runs we will hook in and run the goal of generate -->
+  <!--xjc compiler used, target -> generated-sources, the sources get genrated by xjc-->
+  <!--which are just the classes, it goes trough the build life cycle.-->
+  <!--maven will compile them and put them into a jar-->
   <build>
     <plugins>
       <plugin>
