--- a/7-generatingSourcesWMaven/mb2g-jaxb/pom.xml
+++ b/7-generatingSourcesWMaven/mb2g-jaxb/pom.xml
@@ -52,6 +52,21 @@
           </execution>
         </executions>
       </plugin>
+      <!--Clean jaxb project automatically-->
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>auto-clean</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
 </project>
