--- a/7-5generatingSourcesWMaven/mb2g-json-schema/pom.xml
+++ b/7-5generatingSourcesWMaven/mb2g-json-schema/pom.xml
@@ -7,7 +7,7 @@
   <groupId>guru.springframework</groupId>
   <artifactId>mb2g-json-schema</artifactId>
   <version>1.0-SNAPSHOT</version>
-  
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -16,4 +16,40 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+  </dependencies>
+
+<!-- build output: target -> generated-sources -> jsonschema2pojo -> g.springframework.model ->address -->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jsonschema2pojo</groupId>
+        <artifactId>jsonschema2pojo-maven-plugin</artifactId>
+        <version>1.0.2</version>
+        <configuration>
+          <!-- base directory of the build maven will inject it the property during runtime-->
+          <sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
+          <targetPackage>guru.springframework.model</targetPackage>
+          <useCommonsLang3>true</useCommonsLang3>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
