updated pom to work with junit4, also updated test class

--- a/9-testingWMaven/mb2g-testing/pom.xml
+++ b/9-testingWMaven/mb2g-testing/pom.xml
@@ -16,4 +16,15 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <!--targets our scope for test directory.-->
+      <!--when we are packaging this libraries would be not be included or added as dependencies-->
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 </project>
