--- a/9-testingWMaven/mb2g-testing/pom.xml
+++ b/9-testingWMaven/mb2g-testing/pom.xml
@@ -14,10 +14,11 @@
     <java.version>11</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <junit.version>5.3.2</junit.version>
+    <junit.version>5.6.2</junit.version>
   </properties>
 
   <dependencies>
+    <!--    We still need to maintain the junit4 dependency-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -30,14 +31,22 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <!--    Runs the tests-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <!--    What enables the junit 5 context to run junit 4 tests-->
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-
+  <!-- Junit5 support-->
   <build>
     <plugins>
       <plugin>
