--- a/9-testingWMaven/mb2g-testing/pom.xml
+++ b/9-testingWMaven/mb2g-testing/pom.xml
@@ -47,7 +47,8 @@
           <compilerId>groovy-eclipse-compiler</compilerId>
           <compilerArguments>
             <indy/><!-- optional; supported by batch 2.4.12-04+ -->
-            <configScript>config.groovy</configScript><!-- optional; supported by batch 2.4.13-02+ -->
+            <configScript>config.groovy
+            </configScript><!-- optional; supported by batch 2.4.13-02+ -->
           </compilerArguments>
         </configuration>
         <dependencies>
